fdo#58327: writerfilter: RemoveLastParagraph is tricky:

What happens here is that the xCursor->goLeft( 1, true ) selects the
entire inserted table, which is then deleted.  That causes annoyances,
such as an assertion from ~SwIndexReg because as collateral damage the
SwTxtNode that SwReader::Read's pUndoPam points to is also deleted, as
well as missing tables in the document.

DomainMapper_Impl::RemoveLastParagraph() can avoid this by not using
setString() but instead disposing the paragraph, like it already does in
other cases.  But don't do it for new (loaded) documents, because it may
kill flys in that case, which i strangely couldn't reproduce when
pasting as RTF.

Change-Id: I87302b8916e39ca42bc4fedfee40ac38fadd0939